tests/ui/pattern/usefulness/struct-pattern-match-useless.stderr
error: unreachable pattern
  --> $DIR/struct-pattern-match-useless.rs:12:9
   |
LL |         Foo { x: _x, y: _y } => (),
   |         -------------------- this pattern is irrefutable; subsequent arms are never executed
LL |         Foo { .. } => ()
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/struct-pattern-match-useless.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

